@@ -4,7 +4,7 @@
 # bin/make-dist-tarball
 # Part of python-daemon, an implementation of PEP 3143.
 #
-# Copyright © 2007–2009 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2007–2010 Ben Finney <ben+python@benfinney.id.au>
 #
 # This is free software: you are free to modify and/or redistribute it
 # under the terms of the GNU General Public License as published by
