@@ -3,7 +3,7 @@
 # daemon/runner.py
 # Part of python-daemon, an implementation of PEP 3143.
 #
-# Copyright © 2009 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2009–2010 Ben Finney <ben+python@benfinney.id.au>
 # Copyright © 2007–2008 Robert Niederreiter, Jens Klein
 # Copyright © 2003 Clark Evans
 # Copyright © 2002 Noah Spurrier
