@@ -3,7 +3,7 @@
 # test/scaffold.py
 # Part of python-daemon, an implementation of PEP 3143.
 #
-# Copyright © 2007–2009 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2007–2010 Ben Finney <ben+python@benfinney.id.au>
 # This is free software; you may copy, modify and/or distribute this work
 # under the terms of the GNU General Public License, version 2 or later.
 # No warranty expressed or implied. See the file LICENSE.GPL-2 for details.
