@@ -1,6 +1,7 @@
 2010-01-20  Ben Finney  <ben+python@benfinney.id.au>
 
     * Add ‘pylint’ configuration for this project.
+    * Update copyright notices.
 
 2009-10-24  Ben Finney  <ben+python@benfinney.id.au>
 
